[package]
name = "ardite"
version = "0.0.1"
description = "Core library for Ardite services."
keywords = ["ardite", "core"]
authors = ["Caleb Meredith <calebmeredith8@gmail.com>", "Victor M. Suarez <svmnotn@gmail.com>"]
license = "MIT"
homepage = "https://github.com/ardite/ardite-core"
repository = "ardite/ardite-core"
readme = "README.md"
build = "build.rs"

[features]
default = []
driver_mongodb = ["mongodb", "bson"]

[dependencies]
bson = { version = "0.2.0", optional = true }
lazy_static = "0.1.15"
linear-map = "0.0.4"
mongodb = { version = "0.1.3", optional = true }
regex = "0.1.55"
serde = "0.7.0"
serde_json = "0.7.0"
serde_yaml = "0.2.2"

[build-dependencies]
glob = "0.2.11"
serde_codegen = "0.7.0"
syntex = "0.29.0"
