[package]
name = "ardite"
version = "0.0.1"
description = "Core library for Ardite services."
keywords = ["ardite", "core"]
authors = ["Caleb Meredith <calebmeredith8@gmail.com>", "Victor M. Suarez <svmnotn@gmail.com>"]
license = "MIT"
homepage = "https://github.com/ardite/ardite-core"
repository = "ardite/ardite-core"
readme = "README.md"

[features]
default = []
driver_mongodb = ["mongodb", "bson"]

[dependencies]
Inflector = "0.2.0"
lazy_static = "0.1.15"
linear-map = { git = "https://github.com/calebmer/linear-map", features = ["serde_impl"] }
regex = "0.1.58"
serde = "0.7.0"
serde_json = "0.7.0"
serde_yaml = "0.2.3"
url = "0.5.7"

bson = { version = "0.1.4", optional = true }
mongodb = { version = "0.1.3", optional = true }
